<?xml version="1.0"?>
<package format="2">
  <name>rt_logger</name>
  <version>0.0.1</version>
  <description>The real time logger package</description>

  <maintainer email="gennaro.raiola@gmail.com">graiola</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>realtime_tools</depend>
  <depend>std_msgs</depend>

  <test_depend>roscpp</test_depend>
  <test_depend>realtime_tools</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>std_msgs</test_depend>

</package>
